--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
+    "fs": "0.0.1-security",
+    "http": "0.0.1-security",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.3.0",
@@ -62,6 +64,9 @@
     "react-bootstrap-typeahead": "^5.1.0",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "websocket": "^1.0.31"
   }
 }
